--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <header class="header">
         <a href="#" class="logo">WriteWise</a>
         <nav class="main-nav">
-            
+            <li><a href="#">About</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Login</a></li>
+                <li><a href="#" class="btn-signup">Sign Up</a></li>
+            </ul>
         </nav>
         <button class="mobile-nav-toggle" aria-controls="main-nav" aria-expanded="false">
             <span class="sr-only">Menu</span>
